--- a/docs/cloud/guides/sync-scheduling.mdx
+++ b/docs/cloud/guides/sync-scheduling.mdx
@@ -24,7 +24,9 @@ In the _Schedule Settings_, you're provided with a webhook URL. Next, you will n
 
 <img src="/pics/cloud/sync-webhook-dbt-cloud.png" />
 
-Heading to dbt Cloud, you can [create a webhook subscription](https://docs.getdbt.com/docs/deploy/webhooks#create-a-webhook-subscription) that would trigger a sync after your jobs are done. After completing the guide, you'll be provided with the secret token that you'll need to fill in the form on Elementary Cloud. Press _Save_ and you're done!
+Heading to dbt Cloud, you can [create a webhook subscription](https://docs.getdbt.com/docs/deploy/webhooks#create-a-webhook-subscription) that would trigger a sync after your jobs are done. Make sure the webhook is triggered on `Run completed` events, and select the jobs of the relevant environment. After completing the guide, you'll be provided with the secret token that you'll need to fill in the form on Elementary Cloud. Press _Save_ and you're done!
+
+<Warning>Note that each environment has a different webhook</Warning>
 
 #### dbt Core
 
